--- a/pages/AboutUs.html
+++ b/pages/AboutUs.html
@@ -4,17 +4,18 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <!--Icono-->
     <link rel="icon" href="../assets/images/img_registrarUX/Letra G en rojo.ico">
+    <!--Googlefonts-->
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400&family=Poppins:wght@200;400;600&display=swap"
         rel="stylesheet" />
 
-    <title>Acerca de nosotros</title>
-    <link rel="icon" href="../assets/images/Mesa de trabajo 1 copia 8@2x.png">
+    <title>LinkGameIn - Acerca de nosotros</title>
+    <!--EstilosDeBootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
-    <link rel="stylesheet" href="../assets/styles/styleAboutUs.css">
+    <link rel="stylesheet" href="../assets/styles/styleAboutUs.css"> <!--EstilosCSS-->
 </head>
 
 
@@ -221,37 +222,6 @@
 
     </div> <!--cierre de container-->
 
-    <!-- Footer -->
-    <footer class="mt-auto">
-        <div class="footer-container">
-            <div class="row">
-                <div class="col-4">
-                    <div class="divider"></div>
-                </div>
-                <div class="col-4 footer-social">
-                    <a href="#" class="social-icon"><img src="../assets/images/linkedin.png" alt="LinkedIn"></a>
-                    <a href="#" class="social-icon"><img src="../assets/images/github-logo.png" alt="GitHub"></a>
-                    <a href="#" class="social-icon"><img src="../assets/images/Discord.svg" alt="Discord"></a>
-                    <!-- Agrega más redes sociales si es necesario -->
-                </div>
-                <div class="col-4">
-                    <div class="divider"></div>
-                </div>
-            </div>
-            <img src="../assets/images/Logo.svg" alt="logo" class="footerlogo">
-            <div class="row links">
-                <div class="col-4">
-                    <a href="./AboutUs.html">Acerca de nosotros</a>
-                </div>
-                <div class="col-4">
-                    <a href="./Terminosycondiciones.html">Terminos y condiciones</a>
-                </div>
-                <div class="col-4">
-                    <a href="./contactanos.html">Contactanos</a>
-                </div>
-            </div>
-        </div>
-    </footer>
 
     <script src="../assets/scripts/scriptsMenuNavbar.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
