--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -14,7 +14,7 @@
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400&family=Poppins:wght@200;400;600&display=swap" />
 
     <!-- Doc Title -->
-    <title>Contactanos</title>
+    <title>LinkGameIn - Contactanos</title>
 
     <!-- Styles -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -30,9 +30,9 @@
     <nav class="custom-navbar d-flex justify-content-between">
         <!-- Contenedor Logo -->
         <div id="containerLogo">
-        </div>  <!-- Cierre de contenedor logo -->
+        </div> <!-- Cierre de contenedor logo -->
         <!-- Contenedor de Imagen Login/Logout -->
-        <div class="containerProfile position-relative" id="profileImg" >
+        <div class="containerProfile position-relative" id="profileImg">
         </div> <!-- Cierre de contenedor de Imagen Login/Logout -->
         <!-- Contenedor Menu Config -->
         <div class="config-menu" id="configMenu">
@@ -106,37 +106,6 @@
     </div>
 
 
-    <!-- Footer -->
-    <footer class="mt-auto">
-        <div class="footer-container">
-            <div class="row">
-                <div class="col-4">
-                    <div class="divider"></div>
-                </div>
-                <div class="col-4 footer-social">
-                    <a href="#" class="social-icon"><img src="../assets/images/linkedin.png" alt="LinkedIn"></a>
-                    <a href="#" class="social-icon"><img src="../assets/images/github-logo.png" alt="GitHub"></a>
-                    <a href="#" class="social-icon"><img src="../assets/images/Discord.svg" alt="Discord"></a>
-                    <!-- Agrega más redes sociales si es necesario -->
-                </div>
-                <div class="col-4">
-                    <div class="divider"></div>
-                </div>
-            </div>
-            <img src="../assets/images/Logo.svg" alt="logo" class="footerlogo">
-            <div class="row links">
-                <div class="col-4">
-                    <a href="./AboutUs.html">Acerca de nosotros</a>
-                </div>
-                <div class="col-4">
-                    <a href="#">Terminos y condiciones</a>
-                </div>
-                <div class="col-4">
-                    <a href="./contactanos.html">Contactanos</a>
-                </div>
-            </div>
-        </div>
-    </footer>
 
 
 
