--- a/pages/dashBoard.html
+++ b/pages/dashBoard.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="../assets/images/img_registrarUX/Letra G en rojo.ico">
     <!-- Estilos de Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -11,46 +12,23 @@
     <link rel="stylesheet" href="/assets/styles/estilosDeDashBoard.css">
     <!-- Modificadores Sass -->
     <link rel="stylesheet" href="/assets/styles/Styles.scss">
-    <title>Dashboard</title>
+    <title>LinkGameIn</title>
 </head>
 
-<body>
-    <!-- Header -->
-    <header>
-        <nav class="navbar navbar-expand-lg">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="/dashBoard.html"><img src="/assets/images/Logo-horizontal 1@2x.png"
-                        alt="logo rojo" class="imagen" id="logo"></a>
+<body class="d-flex flex-column min-vh-100">
 
-                <!-- Botón de búsqueda -->
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <img src="/assets/images/Search.png" alt="logo buscar" class="logo" id="buscar">
-                </button>
-
-                <!-- Vista colapsada de busqueda -->
-                <div class="collapse navbar-collapse" id="navbarSupportedContent" style=" margin-left: 400px;">
-                    <form class="d-flex" role="search">
-                        <input class="form-control me-2" type="search" placeholder="Buscar en LinkGameIn"
-                            aria-label="Search">
-                        <button class="btn btn-outline-danger" type="submit">Buscar</button>
-                    </form>
-                </div>
-
-                <!-- Fin de boton de búsqueda -->
-
-                <!-- Imagen de perfil -->
-
-                <a href="#" class="perfilHeader"><img src="/assets/images/Cyberpunk 2077 icon.png" alt="logo rojo"
-                        class="imagen" id="perfil"></a>
-
-                <!-- Fin imagen de perfil -->
-
-            </div>
-        </nav>
-    </header> <!-- Fin de Header -->
-
+    <!-- Barra de navegación -->
+    <nav class="custom-navbar d-flex justify-content-between">
+        <!-- Contenedor Logo -->
+        <div id="containerLogo">
+        </div> <!-- Cierre de contenedor logo -->
+        <!-- Contenedor de Imagen Login/Logout -->
+        <div class="containerProfile position-relative" id="profileImg">
+        </div> <!-- Cierre de contenedor de Imagen Login/Logout -->
+        <!-- Contenedor Menu Config -->
+        <div class="config-menu" id="configMenu">
+        </div> <!-- Cierre div de menu -->
+    </nav> <!-- Cierre de Barra de navegación -->
 
     <div class="container text-center">
 
@@ -143,6 +121,7 @@
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
 
+    <script src="../assets/scripts/scriptsMenuNavbar.js"></script>
     <!-- Script local -->
     <script src="/assets/scripts/dashBoard.js"></script>
 </body>
