--- a/pages/page404.html
+++ b/pages/page404.html
@@ -37,53 +37,20 @@
 
 
     <div class="conten">
-        <div class="conten-img">
-            <img class="backimg" src="../assets/images/pacman-4121590_1920.png" alt="404"> <!--imagen de error 404-->
-            <p class="conten-number">
-                404
-            </p> <!--parrfo con 404-->
-        </div>
-        <div class="conten-description">
-            <p class="conten-error">
-                Verifica el enlace, ya que es posible que esté dañado, o se haya eliminado.
-            </p> <!--texto del error-->
-        </div>
+        <p class="conten-number">
+            404
+        </p> <!--parrfo con 404-->
+    </div>
+    <div class="conten-description">
+        <p class="error">Pagina no encontrada</p> <br><br>
+        <p class="conten-error">
+            Verifica el enlace, ya que es posible que esté dañado, o se haya eliminado.
+        </p> <!--texto del error-->
     </div>
 
 
 
-    <!-- Footer -->
-    <footer class="mt-auto">
-        <div class="footer-container">
-            <div class="row">
-                <div class="col-4">
-                    <div class="divider"></div>
-                </div>
-                <div class="col-4 footer-social">
-                    <a href="#" class="social-icon"><img src="../assets/images/linkedin.png" alt="LinkedIn"></a>
-                    <a href="#" class="social-icon"><img src="../assets/images/github-logo.png" alt="GitHub"></a>
-                    <a href="#" class="social-icon"><img src="../assets/images/Discord.svg" alt="Discord"></a>
-                    <!-- Agrega más redes sociales si es necesario -->
-                </div>
-                <div class="col-4">
-                    <div class="divider"></div>
-                </div>
-            </div>
-            <img src="../assets/images/Logo.svg" alt="logo" class="footerlogo">
-            <div class="row links">
-                <div class="col-4">
-                    <a href="./AboutUs.html">Acerca de nosotros</a> <!--lleva a acerca de nosotros-->
-                </div>
-                <div class="col-4">
-                    <a href="./Terminosycondiciones.html">Terminos y condiciones</a>
-                    <!--lleva a terminos y condiciones-->
-                </div>
-                <div class="col-4">
-                    <a href="./contactanos.html">Contactanos</a> <!--lleva a contactanos-->
-                </div>
-            </div>
-        </div>
-    </footer>
+
 
     <script src="../assets/scripts/scriptsMenuNavbar.js"></script> <!--estilos de menu-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
