--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -1,30 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 
-
 <head>
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <!-- icono -->
     <link rel="icon" href="../assets/images/img_registrarUX/Letra G en rojo.ico">
-
     <!-- Fonts -->
-    <link rel="fonts" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400&family=Poppins:wght@200;400;600&display=swap"/>
-
+    <link rel="fonts"
+        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400&family=Poppins:wght@200;400;600&display=swap" />
     <!-- Doc Title -->
-    <title>LinkGameIn - Contactanos</title>
-
+    <title>LinkGameIn - Contáctanos</title>
     <!-- Styles -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="../assets/styles/contactanos.css">
-
 </head>
 
-
 <body class="d-flex flex-column min-vh-100">
-
     <!-- Barra de navegación -->
     <nav class="custom-navbar d-flex justify-content-between">
         <!-- Contenedor Logo -->
@@ -38,17 +31,15 @@
         </div> <!-- Cierre div de menu -->
     </nav> <!-- Cierre de Barra de navegación -->
 
-
     <div class="container">
-        <form class="row needs-validation" id="form-register-user" novalidate action="https://formspree.io/f/xpzgoyjo"
-            method="post">
+
+        <form class="row needs-validation" id="form-contact-us" novalidate>
             <div class="col" id="title-contact">
-                Contactanos
+                Contáctanos
             </div>
-            <div class="col-12 mb-3">
+            <div class="col-12 mb-3 position-relative">
                 <div class="form-floating">
-                    <input type="text" name="input-name" class="form-control" id="input-name" placeholder="Nombre"
-                        required>
+                    <input type="text" name="input-name" class="form-control" id="input-name" placeholder="Nombre" required>
                     <label for="input-name">Nombre</label>
                     <div class="valid-tooltip">
                         Correcto
@@ -60,8 +51,7 @@
             </div>
             <div class="col-12 mb-3 position-relative">
                 <div class="form-floating">
-                    <input type="email" name="input-email" class="form-control" id="input-email"
-                        placeholder="correo@ejemplo.com" required>
+                    <input type="email" name="input-email" class="form-control" id="input-email" placeholder="correo@ejemplo.com" required>
                     <label for="input-email">correo@ejemplo.com</label>
                     <div class="valid-tooltip">
                         Correcto
@@ -96,26 +86,20 @@
                         Escríbenos un mensaje
                     </div>
                 </div>
-
             </div>
-            <div class="d-grid gap-2 col-4 mx-auto" id="btn-register">
-                <button type="submit" class="btn btn-outline-danger  btn-lg">Enviar</button>
-            </div>
+            <div class="d-grid gap-2 col-12 mx-auto" id="btn-send">
+				<button type="submit" class="btn btn-outline-danger btn-lg">Enviar</button>
+			</div>
         </form>
     </div>
 
-
-
-
+    
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
-
     <script src="../assets/scripts/scriptsMenuNavbar.js"></script>
-
     <script src="../assets/scripts/validaciones.js"></script>
 
 </body>
-
 </html>
