--- a/pages/login.html
+++ b/pages/login.html
@@ -13,7 +13,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="../assets/styles/formulario.css">
-    <title>LinkGameIn - Iniciar Sesión</title>
+    <title>LinkGameIn - Iniciar sesión</title>
 </head>
 
 <body class="d-flex flex-column min-vh-100">
@@ -30,57 +30,54 @@
         </div> <!-- Cierre div de menu -->
     </nav> <!-- Cierre de Barra de navegación -->
 
-
-    <div class="background">
-
-        <div class="container tarjeta"><!-- Contenedor de la tarjeta -->
-            <div class="logo">
-                <img src="../assets/images/img_registrarUX/loginImg.png" alt="Logo">
+    <div class="container">
+        <form class="row needs-validation" method="post" id="login-form" novalidate>
+            <div class="col-12" id="title-login">
+				Inicio de sesión
+			</div>
+            <div class="login-image">
+                <img src="../assets/images/GRoja.svg" width="130px" height="180px" alt="">
             </div>
-            <form class="row needs-validation g-3" method="post" id="login-form" novalidate><!-- Inicio del form -->
-                <div class="col-12 mb-3">
-                    <div class="form-floating">
-                        <input type="email" name="email" class="form-control" id="input-email"
-                            placeholder="correo@ejemplo.com" required>
-                        <label for="input-email">correo@ejemplo.com</label>
-                        <div class="valid-tooltip">
-							Correo válido
-						</div>
-						<div class="invalid-tooltip">
-							Asegurate de agregar una dirección de correo válida
-						</div>
+            <div class="col-12 mb-3 position-relative">
+				<div class="form-floating">
+					<input type="email" class="form-control" id="input-email" placeholder="correo@ejemplo.com" required>
+					<label for="input-email">correo@ejemplo.com</label>
+					<div class="valid-tooltip">
+						Correcto
+					</div>
+					<div class="invalid-tooltip">
+						Es necesario añadir un correo
+                    </div>
+				</div>
+			</div>
+            <div class="col-12 mb-3 position-relative">
+                <div class="form-floating">
+                    <input type="password" class="form-control" id="input-password" placeholder="Contraseña" required>
+                    <label for="input-password">Contraseña</label>
+                    <div class="valid-tooltip">
+                        Correcto
+                    </div>
+                    <div class="invalid-tooltip">
+                        Es necesario añadir una contraseña
                     </div>
                 </div>
-                <div class="col-12 mb-3">
-                    <div class="form-floating">
-                        <input type="password" name="password" class="form-control" id="input-password"
-                            placeholder="Contraseña" required>
-                        <label for="input-password">Contraseña</label>
-                        <div class="valid-tooltip">
-							Correcto
-						</div>
-						<div class="invalid-tooltip">
-							Coontraseña incorrecta
-						</div>
-                    </div>
-                </div>
+            </div>
+            <div class="col-12">
                 <a href="#" class="sinContraseña">Olvidé mi contraseña</a>
-                <div class="d-grid gap-2 col-12 mx-auto" id="btn-register">
-                    <button type="submit" class="btn btn-outline-danger  btn-lg">Iniciar sesión</button>
-                </div>
-
-            </form>
-            <div class="registro">
-                <p class="sinCuenta">Aún no tengo cuenta</p>
             </div>
-            <div class="registro"></div>
-            <a href="./registrarUsuario.html" class="linkRegistro">Regístrate</a>
-        </div>
+            <div class="d-grid gap-2 col-12 mx-auto" id="btn-login">
+                <button type="submit" class="btn btn-outline-danger btn-lg">Iniciar sesión</button>
+            </div>
+            <div class="col-12">
+                <div class="registro">
+                    <p class="sinCuenta">Aún no tengo cuenta</p>
+                </div>
+                <div class="registro"></div>
+                <a href="./registrarUsuario.html" class="linkRegistro">Regístrate</a>
+
+            </div>
+        </form>
     </div>
-    </div>
-
-
-
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
