--- a/pages/registrarUsuario.html
+++ b/pages/registrarUsuario.html
@@ -50,7 +50,7 @@
 					</div>
 					<div class="form-floating">
 						<input type="text" class="form-control" id="input-last-name" placeholder="Apellido" required>
-						<label for="input-apellido">Apellido</label>
+						<label for="input-last-name">Apellido</label>
 						<div class="valid-tooltip">
 							Correcto
 						</div>
@@ -142,7 +142,7 @@
 				</div>
 			</div>
 			<div class="d-grid gap-2 col-12 mx-auto" id="btn-register">
-				<button type="submit" class="btn btn-outline-danger  btn-lg">Registrarse</button>
+				<button type="submit" id="button-register" class="btn btn-outline-danger  btn-lg">Registrarse</button>
 			</div>
 
 		</form>
@@ -157,6 +157,7 @@
 		crossorigin="anonymous"></script>
 	<script src="../assets/scripts/scriptsMenuNavbar.js"></script>
 	<script src="../assets/scripts/validaciones.js"></script>
+	<script src="../assets/scripts/userStorage.js"></script>
 </body>
 
 </html>
