--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-6">
+            <div class="col-5">
                 <h3 class="gamers">De gamers, para gamers.</h3> <br> <br>
                 <h5 class="subtitle">Comparte, juega y conecta.</h5>
                 <br>
@@ -50,22 +50,13 @@
                     </div>
                 </div>
             </div>
-            <div class="col-6">
 
-
-                <div class="carousel slide">
-                    <div class="carousel-indicators">
-                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
-                            class="active" aria-current="true" aria-label="Slide 1"></button>
-                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-                            aria-label="Slide 2"></button>
-                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-                            aria-label="Slide 3"></button>
-
-                    </div>
-                    <div class="carousel-inner" role="listbox">
+            <div class="col-7">
+                <div id="cardCarousel" class="carousel" data-bs-ride="carousel" data-bs-interval="5000">
+                    <!--primer carrusel-->
+                    <div class="carousel-inner" role="listbox"> <!--primer item carrusel-->
                         <div class="carousel-item active">
-                            <div class="card">
+                            <div class="card custom-card"> <!--primer tarjeta-->
                                 <div class="containerprofile"><img src="./assets/images/slphaatheris.jpg" alt=""
                                         srcset="" class="profile-img">
                                     <div>
@@ -83,9 +74,9 @@
                                     <img src="./assets/images/share.svg" alt="">
                                 </div>
                             </div>
-                        </div>
+                        </div><!--cierra primer tarjeta-->
                         <div class="carousel-item">
-                            <div class="card carousel-caption d-none d-md-block">
+                            <div class="card custom-card">
                                 <div class="containerprofile"><img src="./assets/images/timbers.png" alt="" srcset=""
                                         class="profile-img">
                                     <div>
@@ -105,9 +96,9 @@
                                 </div>
                             </div>
 
-                        </div>
+                        </div> <!--cierre segunda tarjeta-->
                         <div class="carousel-item">
-                            <div class="card">
+                            <div class="card custom-card">
                                 <div class="containerprofile"><img src="./assets/images/elded.jpg" alt="" srcset=""
                                         class="profile-img">
                                     <div>
@@ -129,28 +120,30 @@
                             </div>
 
                         </div>
-                    </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                    </div><!--cierra inner-->
+                    <a class="carousel-control-prev custom-control" href="#cardCarousel" role="button"
                         data-bs-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                         <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                    </a> <!--control prev del carrusel-->
+                    <a class="carousel-control-next custom-control" href="#cardCarousel" role="button"
                         data-bs-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
                         <span class="visually-hidden">Next</span>
-                    </button>
-                </div>
+                    </a> <!--cierre controles carrusel-->
 
-            </div>
-        </div>
-    </div>
-
-
+                </div><!--cierre carrusel-->
+            </div> <!--cierre columna-->
+        </div> <!--cierre row-->
+    </div> <!--cierre container-->
 
     <script src="./assets/scripts/landing.js"></script>
+
     <script src="./assets/scripts/scriptsMenuNavbar.js"></script>
-    <script src="./assets/scripts/landing.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
+
+
 </body>
 
 </html>
